# genug-rust

./: Cargo.toml  README.md  rodat_realm.json
.devcontainer/: Dockerfile  docker-compose.yml
src/: api.rs  db.rs  lib.rs  main.rs
src/api/: auth.rs  health.rs  hello.rs  state.rs
