[package]
name = "myservice1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
bb8 = "0.8"
bb8-oracle = { version = "0.1.0", features = ["chrono"] }
color-eyre = "0.6.2"
dotenvy = "0.15.7"
jwt-authorizer = { version = "0.12.0", default-features = false, features = [
  "rustls-tls",
] }
reqwest = { version = "0.11.16", default-features = false, features = [
  "rustls",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
